# libpolycall-docs

./: .gitignore  .gitlab-ci.yml  README.md  gulpfile.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: pages.yml
docs/: CNAME  _config.yml  index.md
docs/_data/: docs_index.yml
docs/_includes/: footer.html  head.html  header.html
docs/_layouts/: default.html  home.html
docs/assets/: site.css
docs/assets/js/: site.js
docs/assets/scss/: _base.scss  _components.scss  _home.scss  _layout.scss  _tokens.scss  _utilities.scss  site.scss
tools/: __init__.py  generate_docs_index.py
