[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "libpolycall-docs"
version = "0.1.0"
description = "Python tooling for the LibPolyCall Jekyll documentation site."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "OBINexus" }
]
keywords = ["libpolycall", "documentation", "jekyll", "github-pages"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
]

[project.scripts]
libpolycall-docs-index = "tools.generate_docs_index:main"

[tool.setuptools]
py-modules = []
packages = ["tools"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
